<resources>
    <string name="app_name">SuitmediaTestApp</string>
    <string name="name">Name</string>
    <string name="palindrome">Palindrome</string>
    <string name="check">CHECK</string>
    <string name="next">NEXT</string>
    <string name="second_screen">Second Screen</string>
    <string name="third_screen">Third Screen</string>
    <string name="welcome">Welcome</string>
    <string name="username">Username</string>
    <string name="selected_user_name">Selected User Name</string>
    <string name="choose_a_user">Choose a User</string>
    <string name="avatar">avatar</string>
    <string name="firstname_lastname">Firstname Lastname</string>
    <string name="email">email@gmail.com</string>
    <string name="back_button">back button</string>
</resources>