<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.SecondActivity">

    <ImageButton
        android:id="@+id/btn_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/back_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/txt_secondScreen"
        android:paddingStart="20dp"
        android:padding="12dp"
        android:src="@drawable/ic_backw"
        android:background="?attr/selectableItemBackground"
        android:elevation="8dp"
        tools:ignore="RtlSymmetry" />

    <TextView
        android:id="@+id/txt_secondScreen"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@id/btn_back"
        app:layout_constraintTop_toTopOf="parent"
        android:text="@string/second_screen"
        android:layout_weight="10"
        android:textAlignment="center"
        android:textSize="18sp"
        android:textStyle="bold"
        android:padding="12dp"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#D3D3D3"
        app:layout_constraintTop_toBottomOf="@id/txt_secondScreen"/>

    <TextView
        android:id="@+id/txt_welcome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/txt_secondScreen"
        android:layout_marginTop="24dp"
        android:layout_marginHorizontal="32dp"
        android:text="@string/welcome"
        android:textStyle="normal"/>

    <TextView
        android:id="@+id/txt_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/txt_welcome"
        android:layout_marginHorizontal="32dp"
        android:text="@string/username"
        android:textFontWeight="600"
        android:textSize="20sp"
        tools:targetApi="28" />

    <TextView
        android:id="@+id/txt_selectedUname"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintTop_toTopOf="parent"
        android:text="@string/selected_user_name"
        android:textStyle="bold"
        android:textSize="24sp"
        android:gravity="center"
        tools:targetApi="28" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_chooseUser"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="32dp"
        android:layout_marginBottom="48dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:shapeAppearance="@style/ShapeAppearance.Material3.Corner.Medium"
        android:text="@string/choose_a_user"/>


</androidx.constraintlayout.widget.ConstraintLayout>