<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="125dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/iv_userPhoto"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:contentDescription="@string/avatar"
            tools:srcCompat="@tools:sample/avatars"
            android:background="@drawable/style_border_user"
            android:scaleType="centerCrop"
            android:clipToOutline="true"
            android:layout_marginStart="36dp"
            android:layout_gravity="center"
            tools:targetApi="31" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginHorizontal="12dp"
            android:layout_gravity="center">

            <TextView
                android:id="@+id/txt_fullname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/firstname_lastname"
                android:textSize="16sp"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/txt_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/email"
                android:textColor="#575656"/>


        </LinearLayout>

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#D3D3D3"
        android:layout_marginHorizontal="12dp"
        app:layout_constraintTop_toBottomOf="@id/txt_secondScreen"/>








</LinearLayout>